--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,1 @@
-<link href="http://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
+<link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
